--- a/BackEndServer/Dockerfile
+++ b/BackEndServer/Dockerfile
@@ -1,9 +1,11 @@
 FROM golang:1.24-alpine
 
+WORKDIR /app
+
 COPY go.mod go.sum ./
 RUN go mod download
 
-COPY . . 
-RUN go build -v -o /usr/bin/local/app ./,,,
+COPY *.go ./ 
+RUN CGO_ENABLED=0 GOOS=linux go build -v -o /dab-server 
 
-CMD ["app"]
+CMD ["/dab-server"]
