--- a/BackEndServer/Dockerfile
+++ b/BackEndServer/Dockerfile
@@ -4,8 +4,9 @@ WORKDIR /app
 
 COPY go.mod go.sum ./
 RUN go mod download
+COPY . ./
+RUN ls
 
-COPY *.go ./ 
 RUN CGO_ENABLED=0 GOOS=linux go build -v -o /dab-server 
 
 CMD ["/dab-server"]
