--- a/DABClient/package.json
+++ b/DABClient/package.json
@@ -15,6 +15,7 @@
 		"@skeletonlabs/skeleton": "^3.1.7",
 		"@skeletonlabs/skeleton-svelte": "^1.3.1",
 		"@sveltejs/adapter-auto": "^6.0.0",
+		"@sveltejs/adapter-node": "^5.3.1",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/forms": "^0.5.10",
