Added redis dependency to backend

--- a/compose.yml
+++ b/compose.yml
@@ -41,3 +41,6 @@ services:
       rabbitmq:
         condition: service_healthy
         restart: true
+      redis:
+        condition: service_healthy
+        restart: true
